# mix_recorder

./: CMakeLists.txt  CMakeLists.txt~  readme.mb
src/: AudioFile.h  main.cpp  main.cpp~
